--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/recaptcha": "^0.0.27",
     "crypto-js": "^4.1.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ng-recaptcha": "^11.0.0",
+    "ngx-captcha": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
